# vitruvian

./: .gitignore  README.md  pyproject.toml
docs/: bio-agent-research-prd.md  plan.md  product.md  tech-stack.md  vitruvian-agent-research.md  vitruvian-execution-plan.md
e2e_mock/: package.json
examples/: e2e_demo.py
examples/e2e_mock/: fail_script.py
src/vitruvian/: exceptions.py  run.py
src/vitruvian/agents/: vitruvian_agent.py
src/vitruvian/config/: prompts.yaml
src/vitruvian/modules/: anti_loop.py  base.py
src/vitruvian/modules/embodiment/: __init__.py  embodiment_module.py  scanner.py
src/vitruvian/modules/proofreading/: __init__.py  mismatch_repair.py  tech_stack_validator.py
tests/: test_anti_loop.py  test_embodiment.py  test_proofreading.py
